Fixed nav z-index and item adding
Made modals and darkened background appear over the nav so it shows the
full modal on tiny screens. Also made the location of an item an
optional input.

--- a/css/menu.css
+++ b/css/menu.css
@@ -18,7 +18,7 @@
     width: 100%;
     margin: 0 auto;
     padding: 0 20px;
-    z-index: 100;
+    z-index: 90;
     box-sizing: border-box;
     box-shadow: 0 2px 4px 0 rgba(0, 0, 0, 0.20), 0 2px 10px 0 rgba(0, 0, 0, 0.16);
 }
@@ -126,7 +126,7 @@
     background: #3498DB;
     color: #fff;
     position: absolute;
-    z-index: 99;
+    z-index: 89;
     right: 21px;
     top: 80px;
     transition: all 0.3s ease;
