--- a/css/styles.css
+++ b/css/styles.css
@@ -86,7 +86,7 @@
     transition: all 0.3s ease;
     transform: scale(0);
     transform-origin: 100% 100%;
-    z-index: 75;
+    z-index: 100;
     box-sizing: border-box;
     box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.32), 0 4px 10px 0 rgba(0, 0, 0, 0.28);
 }
@@ -105,7 +105,7 @@
     transition: all 0.3s;
     top: 0;
     left: 0;
-    z-index: 10;
+    z-index: 99;
     position: absolute;
 }
 
